# Asio_practice

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: FindAsio.cmake
projects/Asio_client/: CMakeLists.txt
projects/Asio_client/src/: main.cpp
projects/Asio_common/: CMakeLists.txt
projects/Asio_common/include/Asio_common/: common.h
projects/Asio_common/include/Asio_common/detail/: DetachedIOContext.h  Echo.h  EndPointString.h  HandledException.h  Input.h  Message.h  Messenger.h
projects/Asio_common/src/: common.cpp
projects/Asio_common/src/detail/: DetachedIOContext.cpp  Echo.cpp  EndPointString.cpp  HandledException.cpp  Input.cpp  Message.cpp  Messenger.cpp
projects/Asio_common/tests/: CMakeLists.txt  CoroutineRunner.cpp  CoroutineRunner.h  EchoSourceTest.cpp  EchoTargetTest.cpp  MessageSourceTest.cpp  MessageTargetTest.cpp  main.cpp  test.h
projects/Asio_server/: CMakeLists.txt
projects/Asio_server/src/: main.cpp
